--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "langchain-community>=0.4.1",
     "pgvector>=0.4.1",
     "django-ninja>=1.5.0",
+    "django-q2>=1.8.0",
 ]
 
 [dependency-groups]
